--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "options_page": "page/index.html",
     "content_scripts": [
         {
-            "matches": ["https://www.youtube.com/*", "https://www.instagram.com/*", "https://www.tiktok.com/*", "https://www.twitter.com/*"],
+            "matches": ["<all_urls>"],
             "js": ["scripts/scrolling-timeout.js"]
         }
     ],
