--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "name": "PA Media and Design 2024",
     "version": "1.0",
     "action": {
+        "default_title": "Click Me",
         "default_popup": "popup/index.html"
     },
     "options_page": "page/index.html",
